--- a/DevWeb_Trab_Final/Views/Reparacaos/Edit.cshtml
+++ b/DevWeb_Trab_Final/Views/Reparacaos/Edit.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
-<h4>Reparacao</h4>
+<h4>Reparação</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
@@ -19,13 +19,8 @@
                 <span asp-validation-for="DataInicio" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DataFim" class="control-label"></label>
-                <input asp-for="DataFim" class="form-control" />
-                <span asp-validation-for="DataFim" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="CustoAux" class="control-label"></label>
-                <input asp-for="Custo" class="form-control" />
+                <input asp-for="CustoAux" class="form-control" />
                 <span asp-validation-for="CustoAux" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -43,8 +38,13 @@
                 <select asp-for="FuncionariosFK" class="form-control" asp-items="ViewBag.FuncionariosFK"></select>
                 <span asp-validation-for="FuncionariosFK" class="text-danger"></span>
             </div>
+            <br><h5>Para concluir a reparação insira a data de fim de reparação</h5>
             <div class="form-group">
-                <input  type="submit" value="Save" class="btn btn-primary" />
+                <input asp-for="DataFim" class="form-control" />
+                <span asp-validation-for="DataFim" class="text-danger"></span>
+            </div><br />
+            <div class="form-group">
+                <input  type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
