--- a/DevWeb_Trab_Final/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/DevWeb_Trab_Final/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -8,7 +8,7 @@
 <partial name="_StatusMessage" model="Model.StatusMessage" />
 @section Scripts {
     <script>
-        var timeoutMilliseconds = 10000; // 10000 milliseconds = 10 seconds
+        var timeoutMilliseconds = 5000; // 5000 milisegundos = 5 segundos
 
         setTimeout(function () {
             window.location.href = '@Url.Page("/Home/Index")';
