--- a/DevWeb_Trab_Final/Views/Dispositivos/Create.cshtml
+++ b/DevWeb_Trab_Final/Views/Dispositivos/Create.cshtml
@@ -50,7 +50,7 @@
 
             <br />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" formaction="/Funcionarios/Administrador" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
