--- a/DevWeb_Trab_Final/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/DevWeb_Trab_Final/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
 @model DeletePersonalDataModel
+
 @{
-    ViewData["Title"] = "Delete Personal Data";
+    ViewData["Title"] = "Apagar Dados Pessoais";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
