--- a/DevWeb_Trab_Final/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/DevWeb_Trab_Final/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -5,16 +5,16 @@
 }
 
 <header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
+    <h1 class="text-danger">ACESSO NEGADO</h1>
+    <p class="text-danger">Você não tem permissão para ver este recurso.</p>
 </header>
 
 @section Scripts {
     <script>
-        var timeoutMilliseconds = 3000; // 3000 milliseconds = 3 seconds
+        var timeout = 3000; // 3000 milisegundos = 3 segundos
 
         setTimeout(function () {
             window.location.href = '@Url.Page("/Home/Index")';
-        }, timeoutMilliseconds);
+        }, timeout);
     </script>
 }
