--- a/DevWeb_Trab_Final/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/DevWeb_Trab_Final/Areas/Identity/Pages/Account/Logout.cshtml
@@ -5,7 +5,7 @@
 }
 
 <header>
-    <h1>@ViewData["Title"]</h1>
+    <h1>Sair</h1>
     @{
         if (User.Identity?.IsAuthenticated ?? false)
         {
