--- a/DevWeb_Trab_Final/Views/Dispositivos/Index.cshtml
+++ b/DevWeb_Trab_Final/Views/Dispositivos/Index.cshtml
@@ -22,7 +22,7 @@
                             <center><img src="~/imagens/@foto.NomeFoto" alt="Fotografia do Dispositivo @foto.NomeFoto" title="@dispositivo.Modelo" class="img-thumbnail img-fluid"></center>
                         }
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Estado</h5>
                             <p class="card-text">@dispositivo.Estado</p>
                         </div>
                         <ul class="list-group list-group-flush">
