Mudança de CSS em algumas partes

--- a/DevWeb_Trab_Final/Views/Home/Index.cshtml
+++ b/DevWeb_Trab_Final/Views/Home/Index.cshtml
@@ -28,9 +28,17 @@
     }
 
     .corpo p {
-            display: table-cell;
-            text-align: center;
-            vertical-align: middle;
+        display: table-cell;
+        text-align: center;
+        vertical-align: middle;
+    }
+
+    .corpo h1 {
+            font-family: 'Roboto Condensed', sans-serif;
+    }
+
+    .home-txt {
+        padding-top: 20px;
     }
 
 </style>
@@ -39,7 +47,7 @@
     <div class="row">
         <div class="col custom-column">
             <div class="corpo">
-                <h1 class="text-dark"> Serviço de Reparação de Electrodomésticos</h1>
+                <h1 class="text-dark">Serviço de Reparação de Electrodomésticos</h1>
             </div><br /><br />
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
@@ -57,6 +65,12 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="home-txt">
+                <p>Anim ullamco occaecat consectetur adipisicing excepteur pariatur labore mollit Lorem. Deserunt elit amet velit incididunt non dolore et magna labore ad. Minim nulla consequat eu minim. Sit sunt excepteur dolor laboris laborum. Aliquip nisi velit tempor veniam et eu veniam reprehenderit sit fugiat adipisicing occaecat veniam.</p>
+                <p>Sint ex enim mollit nostrud Lorem incididunt minim fugiat qui exercitation anim. Voluptate ad Lorem non anim culpa mollit nulla incididunt pariatur enim. Occaecat amet aute laboris veniam pariatur enim labore. Adipisicing ad veniam ex velit esse labore in ea dolore laborum. Labore ea et elit excepteur magna.</p>
+                <p>Fugiat ex esse cillum ea Lorem voluptate duis consequat elit. Proident veniam laboris et elit laborum duis do esse. Esse aliquip sint nulla cillum officia mollit officia sint labore voluptate ea aliqua. Eiusmod id ad in in occaecat id sint est pariatur excepteur.</p>
+
             </div>
         </div>
         <div class="col custom-column1">
